--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <nav class ="navigation">
        
             <ul class="list">
                 <div class="logo">
                     <li>logo</li>
                 </div>
                 <div class="features">
-                    <li>home</li>
+                <li>home</li>
                 <li>contact</li>
                 <li>about us</li>
                 </div>
